@@ -34,7 +34,7 @@ public class ApplyMacro extends BasicMacro {
 
     @Override
     public void verifyArguments(CompilationContext context, Position position, List<Class<?>> args) {
-        if (args.isEmpty() || !CompilationContext.isAssignableTo(args.get(0), String.class)) {
+        if (args.isEmpty() || !CompilationContext.isAssignableTo(args.getFirst(), String.class)) {
             throw new IllegalArgumentException("Expected at least a String as first argument.");
         }
     }
